--- a/5retrieval-module.tex
+++ b/5retrieval-module.tex
@@ -499,6 +499,7 @@ The difference between the simple and complex trajectories are rather distinct. 
 In a nutshell, by using the proposed $D_{chamfer}$ metrics, the retrieval engine was able to provide relatively good results (Average \textit{Precision@K} = 76\%) which were sorted in a rather organized and useful manner (\textit{nDCG} score = 83\%).
 
 \subsubsection{Vehicle Colour \& Colour Mode}
+\label{subsec:vehiclecolourchamferdistanceexperiment}
 
 As mentioned in Section \ref{subsec:vehColor}, a total of 330 video snippets were extracted from the top 30 results of each colour modes were extracted. As four colour modes were tested, the six volunteer were split into groups of three and they were given two sets of data to evaluate. 
 The results of the average \textit{Precision@K} metric for each of the colour modes were tabulated in Figure \ref{fig:colorspace_score} while Table \ref{tab:avg@k} shows a high level overview of the results across K = 1 to 30. Similar to the evaluation process of the vehicle trajectories, this time, the volunteers were asked to determine the relevance of the colour term to that particular vehicle for each of the video snippets with a scale of 1 to 5. 
