--- a/thesis.tex
+++ b/thesis.tex
@@ -14,6 +14,7 @@
 \usepackage[os=win]{menukeys}
 \usepackage{listings}
 
+
 % -------------------------------------------------------------------
 % own package
 % \usepackage[table,xcdraw]{xcolor}
@@ -148,7 +149,7 @@ Last and not least, I would like to applaud myself and give myself some credit f
 
 \appendix
 \include{sample-appen-manual}
-\include{sample-appen-try}
+% \include{sample-appen-try}
 
 \backmatter
 \bibliography{llt}
